# Claude-Token-Saver

./: .gitignore  AGENTS.md  CLAUDE.md  ClaudeTokenSaver.spec  GitHubAppInstaller.spec  LICENSE  PRODUCTION_READINESS.md  PROOF.md  README.md  README_FreeCoder.md  TESTING_REPORTS.md  auto_save.py  broadcast.py  browser_actions.py  browser_client.py  build_exe.py  cdp_test.py  launch.pyw  launch_github_app_installer.py  launch_token_saver.py  launch_tray.py  patch_upstream.py  pyproject.toml  requirements.txt  smart_router.py  universal_client.py  window_manager.py
.claude/: hot_files.md  manifest.jsonl  session_context.json  source_snapshot.json
.githooks/: post-commit  post-merge
NeoAutocoder/: ARCHITECTURE_DECISIONS.md  MODULE_LIST.md  core_loop.py  provider_chain.py  session.py
ai/: __init__.py  __main__.py
classifier/: __init__.py  classifier.py  splitter.py  types.py
claude_backend/: __init__.py  __main__.py  auto_inject.py  backend.py  cli.py  config.py  config_example.json  constants.py  diagnostics_logger.py  gui.py  hotkey.py  http_server.py  http_server_boot.py  manifest.py  ollama_manager.py  overlay.py  prefs.py  prompt_builder.py  search.py  session_detector.py  session_launcher.py  single_instance.py  storage.py  tokenizer.py  tracker.py  tray.py  types.py  welcome.py
dist_readme/: README.txt
docs/: ANALYTICS_PRIVACY.md  ANALYTICS_TEMPLATES.md  README.md
extension_native_bridge/: README.md
gemini_coder/: __init__.py  config.py  expander.py  gemini_client.py  history.py  platform_utils.py  safe_exec.py  task_manager.py
ui/: app_web.py
(+576 files in other folders)
