[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini_coder_web"
version = "3.0.0"
description = "Universal multi-session browser AI automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gemini Coder Team"}
]
keywords = ["ai", "automation", "browser", "coding", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "customtkinter>=5.2.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "websocket-client>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
gemini-coder-web = "gemini_coder_web.__main__:main"

[project.gui-scripts]
gemini-coder-web = "gemini_coder_web.launch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gemini_coder*", "gemini_coder_web*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
